writ-compiler/tests/snapshots/lowering_tests__operator_eq_desugars_with_derived_ne.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Impl(
            AstImplDecl {
                generics: [],
                contract: Some(
                    Generic {
                        name: "Eq",
                        args: [
                            Named {
                                name: "vec2",
                                span: 31..35,
                            },
                        ],
                        span: 12..53,
                    },
                ),
                target: Named {
                    name: "vec2",
                    span: 5..9,
                },
                members: [
                    Fn(
                        AstFnDecl {
                            attrs: [],
                            vis: None,
                            name: "eq",
                            name_span: 21..23,
                            generics: [],
                            params: [
                                SelfParam {
                                    mutable: false,
                                    span: 12..53,
                                },
                                Regular(
                                    AstParam {
                                        name: "other",
                                        name_span: 24..29,
                                        ty: Named {
                                            name: "vec2",
                                            span: 31..35,
                                        },
                                        span: 24..35,
                                    },
                                ),
                            ],
                            return_type: Some(
                                Named {
                                    name: "bool",
                                    span: 40..44,
                                },
                            ),
                            body: [
                                Expr {
                                    expr: BoolLit {
                                        value: true,
                                        span: 47..51,
                                    },
                                    span: 47..51,
                                },
                            ],
                            span: 12..53,
                        },
                    ),
                ],
                span: 12..53,
            },
        ),
        Impl(
            AstImplDecl {
                generics: [],
                contract: Some(
                    Generic {
                        name: "Ne",
                        args: [
                            Named {
                                name: "vec2",
                                span: 31..35,
                            },
                        ],
                        span: 0..55,
                    },
                ),
                target: Named {
                    name: "vec2",
                    span: 5..9,
                },
                members: [
                    Fn(
                        AstFnDecl {
                            attrs: [],
                            vis: None,
                            name: "ne",
                            name_span: 0..55,
                            generics: [],
                            params: [
                                Regular(
                                    AstParam {
                                        name: "other",
                                        name_span: 0..55,
                                        ty: Named {
                                            name: "vec2",
                                            span: 31..35,
                                        },
                                        span: 0..55,
                                    },
                                ),
                            ],
                            return_type: Some(
                                Named {
                                    name: "bool",
                                    span: 0..55,
                                },
                            ),
                            body: [
                                Return {
                                    value: Some(
                                        UnaryPrefix {
                                            op: Not,
                                            expr: Binary {
                                                left: SelfLit {
                                                    span: 0..55,
                                                },
                                                op: Eq,
                                                right: Ident {
                                                    name: "other",
                                                    span: 0..55,
                                                },
                                                span: 0..55,
                                            },
                                            span: 0..55,
                                        },
                                    ),
                                    span: 0..55,
                                },
                            ],
                            span: 0..55,
                        },
                    ),
                ],
                span: 0..55,
            },
        ),
    ],
}
