writ-compiler/tests/snapshots/lowering_tests__operator_implicit_mut_self_index_set.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Impl(
            AstImplDecl {
                generics: [],
                contract: Some(
                    Generic {
                        name: "IndexSet",
                        args: [
                            Named {
                                name: "int",
                                span: 32..35,
                            },
                            Named {
                                name: "string",
                                span: 42..48,
                            },
                        ],
                        span: 14..53,
                    },
                ),
                target: Named {
                    name: "MyList",
                    span: 5..11,
                },
                members: [
                    Fn(
                        AstFnDecl {
                            attrs: [],
                            vis: None,
                            name: "index_set",
                            name_span: 23..26,
                            generics: [],
                            params: [
                                SelfParam {
                                    mutable: true,
                                    span: 14..53,
                                },
                                Regular(
                                    AstParam {
                                        name: "idx",
                                        name_span: 27..30,
                                        ty: Named {
                                            name: "int",
                                            span: 32..35,
                                        },
                                        span: 27..35,
                                    },
                                ),
                                Regular(
                                    AstParam {
                                        name: "val",
                                        name_span: 37..40,
                                        ty: Named {
                                            name: "string",
                                            span: 42..48,
                                        },
                                        span: 37..48,
                                    },
                                ),
                            ],
                            return_type: None,
                            body: [],
                            span: 14..53,
                        },
                    ),
                ],
                span: 14..53,
            },
        ),
    ],
}
